# codex

codex-rs/: Cargo.toml
codex-rs/openai-proxy/: ARCHITECTURE.md  Cargo.toml  PLAN.md  REASONING.md  STATUS.md
codex-rs/openai-proxy/src/: main.rs  main_backup.rs  main_modelclient.rs
codex-rs/openai-proxy/static/: logs.css  logs.html  logs.js
